# incomplete_ode_comparison

./: Manifest.toml  README.md  pyproject.toml  run.sh
data/: lotka.json
jl/: Manifest.toml  Project.toml  init.jl  lotka.jl  lotka_static.jl
make/: local
py/: lotka.py
stan/: lotka  lotka.hpp  lotka.stan
