[tool.poetry]
name = "incomplete_ode_comparison"
version = "0.1.0"
description = ""
authors = ["Niko Siccha <nikolassiccha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cmdstanpy = "^1.0.7"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
arviz = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
